# hustsync.rs

./: .gitignore  Cargo.toml  Changelog.md  FUTURE-PARITY.md  README.md  Timeline.md  Todo.md  usage.md
.cargo/: config.toml
.github/workflows/: clippy.yml  cross-impl.yml
crates/config-parser/: Cargo.toml
crates/config-parser/src/: lib.rs
crates/config-parser/tests/: test_parse.rs
crates/hustsync/: Cargo.toml
crates/hustsync-cli/: Cargo.toml
crates/hustsync-cli/src/: main.rs
crates/hustsync-config-parser/: Cargo.toml
crates/hustsync-config-parser/src/: lib.rs
crates/hustsync-config-parser/tests/: test_parse.rs  test_provider_validation.rs
crates/hustsync-internal/: Cargo.toml
crates/hustsync-internal/src/: error.rs  lib.rs  logger.rs  msg.rs  status.rs  status_web.rs  util.rs
crates/hustsync-internal/tests/: roundtrip.rs
crates/hustsync-internal/tests/fixtures/msg/: client_cmd.json  mirror_schedules.json  mirror_status.json  worker_cmd.json  worker_status.json
crates/hustsync-internal/tests/fixtures/status/: sync_status_variants.json
crates/hustsync-internal/tests/fixtures/status_web/: web_mirror_status.json
crates/hustsync-manager/: Cargo.toml
crates/hustsync-manager/src/: common.rs  config.rs  handlers.rs  lib.rs  metrics.rs  middleware.rs  server.rs
crates/hustsync-manager/src/database/: db_redb.rs  db_redis.rs  mod.rs
crates/hustsync-manager/tests/: contract_get.rs  contract_harness.rs  contract_manager_cmd.rs  contract_status_file.rs  contract_tls.rs  contract_workers.rs  e2e_inproc.rs  test_api.rs  test_config.rs  test_db.rs  test_metrics.rs
crates/hustsync-manager/tests/contract/: mod.rs
crates/hustsync-manager/tests/fixtures/http/cmd/: request_happy.json  response_happy.json  response_unknown_mirror.json  response_unknown_worker.json  response_worker_timeout.json  response_worker_unreachable.json
crates/hustsync-manager/tests/fixtures/http/jobs_disabled/: response.json
crates/hustsync-manager/tests/fixtures/http/workers_delete/: response.json
crates/hustsync-manager/tests/fixtures/http/workers_jobs_mirror/: request_failed.json  request_pre_syncing.json  request_success.json  request_syncing.json
crates/hustsync-manager/tests/fixtures/http/workers_jobs_mirror_size/: request.json
crates/hustsync-manager/tests/fixtures/http/workers_register/: request.json  response.json
crates/hustsync-manager/tests/fixtures/http/workers_schedules/: request.json
crates/hustsync-manager/tests/fixtures/tls/: README
crates/hustsync-web/: Cargo.toml
crates/hustsync-web/src/internal/: logger.rs  mod.rs  msg.rs  status.rs  status_web.rs  util.rs
crates/hustsync-worker/: Cargo.toml
crates/hustsync-worker/src/: error.rs  job.rs  lib.rs  metrics.rs  schedule.rs  server.rs
crates/hustsync-worker/src/hooks/: exec.rs  loglimit.rs  mod.rs  working_dir.rs
crates/hustsync-worker/src/provider/: cmd_provider.rs  mod.rs  rsync_provider.rs  two_stage_rsync_provider.rs
crates/hustsync-worker/tests/: cmd_provider_contract.rs  contract_cmd.rs  hooks_exec_contract.rs  hooks_loglimit_contract.rs  rsync_log_parity.rs  rsync_provider_contract.rs  test_metrics.rs  two_stage_rsync_contract.rs
crates/hustsync-worker/tests/fixtures/rsync-argv/: auth.json  basic.json  ipv6-exclude.json  override-only.json
crates/hustsync/src/: main.rs
crates/hustsynctl/: Cargo.toml
crates/hustsynctl/src/: main.rs
deploy/launchd/: com.hustsync.manager.plist  com.hustsync.worker.plist
deploy/systemd/: hustsync-manager.service  hustsync-worker.service
docs/example/: manager.conf  test_manager.toml  test_worker.toml  worker.conf
docs/example/archlinux/: manager.conf  worker.conf
