[workspace]
resolver = "3"
members = ["crates/hustsync-cli", "crates/hustsync-config-parser", "crates/hustsync-web"]

# TODO，开发中暂时禁用
[workspace.lints.clippy]
panic = "deny"
# unwrap_used = "warn"
# expect_used = "warn"
# unimplemented = "deny"
# dbg_macro = "warn"
# clone_on_ref_ptr = "warn"
# rc_clone_in_vec_init = "warn"
# large_stack_arrays = "warn"
# large_const_arrays = "warn"
# async_yields_async = "deny"
# mutex_atomic = "deny"
# mutex_integer = "deny"
# rc_mutex = "deny"
# unused_async = "deny"
# await_holding_lock = "deny"
# large_futures = "deny"
# future_not_send = "deny"
# redundant_else = "deny"
# needless_continue = "deny"
# needless_raw_string_hashes = "deny"
# or_fun_call = "deny"
# cognitive_complexity = "deny"
