[workspace]
resolver = "3"
members = [
    "crates/hustsync",
    "crates/hustsynctl",
    "crates/hustsync-config-parser",
    "crates/hustsync-internal",
    "crates/hustsync-manager",
    "crates/hustsync-worker",
]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
lto = true
strip = true
panic = "abort"

[workspace.lints.clippy]
# — correctness / safety —
panic = "deny"
unwrap_used = "warn"
expect_used = "warn"
unimplemented = "deny"
dbg_macro = "warn"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "warn"
zombie_processes = "deny"
fallible_impl_from = "deny"
trivial_regex = "warn"
# — concurrency —
async_yields_async = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
rc_mutex = "deny"
unused_async = "deny"
await_holding_lock = "deny"
large_futures = "deny"
future_not_send = "deny"
# — performance —
clone_on_ref_ptr = "warn"
rc_clone_in_vec_init = "warn"
large_stack_arrays = "warn"
large_const_arrays = "warn"
redundant_clone = "deny"
# — clarity —
redundant_else = "deny"
needless_continue = "deny"
needless_raw_string_hashes = "deny"
or_fun_call = "deny"
cognitive_complexity = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
