[package]
name = "hustsync-internal"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter", "local-time", "time"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
