[package]
name = "hustsync-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
chrono = { version = "0.4.43", features = ["serde"] }
hustsync-config-parser = { path = "../hustsync-config-parser" }
hustsync-internal = { path = "../hustsync-internal" }
once_cell = "1.21.3"
redb = "3.1.0"
redis = { version = "0.27", features = [] }
reqwest = "0.13.2"
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
tokio = "1.50.0"
tower-http = { version = "0.6.8", features = ["catch-panic", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
toml = "0.9"
tempfile = "3.23.0"
tower = { version = "0.5", features = ["util"] }
http = "1.0"
once_cell = "1.21.3"
# rcgen: generates self-signed certificates for TLS contract smoke tests (T9)
# without shelling out to openssl, keeping test setup hermetic.
rcgen = "0.13"
hustsync-worker = { path = "../hustsync-worker" }

[lints]
workspace = true
