[package]
name = "hustsync-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
chrono = "0.4.42"
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter", "local-time", "time"] }

[lints]
workspace = true
