[package]
name = "hustsync-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = "0.4"
futures = "0.3"
hustsync-config-parser = { version = "0.1.0", path = "../hustsync-config-parser" }
hustsync-internal = { version = "0.1.0", path = "../hustsync-internal" }
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
tracing = "0.1"

[lints]
workspace = true
