[package]
name = "hustsync-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = "0.7"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chrono = "0.4"
futures = "0.3"
hustsync-config-parser = { version = "0.1.0", path = "../hustsync-config-parser" }
hustsync-internal = { version = "0.1.0", path = "../hustsync-internal" }
nix = { version = "0.31.2", features = ["process", "signal"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1"
serde_json = "1"
shlex = "1.3.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "fs", "process", "time"] }
tokio-util = "0.7"
tracing = "0.1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
