[package]
name = "hustsynctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hustsync-internal = { path = "../hustsync-internal" }
toml = "0.8"
tera = "1.19.1"

[lints]
workspace = true
